Updated some missed items

--- a/views/pages/server.ejs
+++ b/views/pages/server.ejs
@@ -145,10 +145,10 @@
 
         <div class="JCFooter">
             <img src="/assets/images/LogoGray.png" class="footerLogo">
-            <p class="footerTitle">Get in Touch with Us</p>
-            <p class="footerDesc">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum</p>
+            <p class="footerTitle">Looking to get in touch?</p>
+            <p class="footerDesc">Contact us via the forums or for a more direct communication feel free to join our discord!</p>
 
-            <p class="footerCopyright">Escape from Tarkraft &copy; 2021. All Rights Reserved</p>
+            <p class="footerCopyright">JA Enterprises LLC &copy; 2021. All Rights Reserved</p>
             <a href="https://joshuacote.net" class="joshuacote">Made by <img src="https://joshuacote.net/copyright/cote.png"></a>
         </div>
         <!-- FOOTER -->
