--- a/views/pages/leaderboards.ejs
+++ b/views/pages/leaderboards.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="Escape From Tarkraft"/>
         <title>Escape From Tarkraft</title>
-        <meta property="og:description" content="Lore and Storyline"/>
+        <meta property="og:description" content="Do you have what it takes?"/>
         <meta property="og:image" content="https://joshuacote.net/assets/images/Eagle111.png"/>
         <meta name="keywords" content="For, SEO,Optimization">
         <meta name="author" content="Joshua Cote">
