Final touches of SEO details for the site

--- a/views/pages/leaderboards.ejs
+++ b/views/pages/leaderboards.ejs
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="Escape From Tarkraft"/>
         <title>Escape From Tarkraft</title>
-        <meta property="og:description" content="Do you have what it takes?"/>
+        <meta property="og:description" content="A true hardcore PvP shooter experience in Minecraft!"/>
         <meta property="og:image" content="https://joshuacote.net/assets/images/Eagle111.png"/>
-        <meta name="keywords" content="For, SEO,Optimization">
+        <meta name="keywords" content="Tarkraft, Escape from Tarkraft, Escape from Tarkov, Tarkov, Tarkov in Minecraft, EFT, EFT in Minecraft">
         <meta name="author" content="Joshua Cote">
         <link rel="shortcut icon" href="/assets/images/logoPrimary.png" type="image/png">
 
