--- a/views/pages/leaderboards.ejs
+++ b/views/pages/leaderboards.ejs
@@ -119,7 +119,7 @@
         
                             <div class="profileInfo">
                                 <p class="profType">Playtime</p>
-                                <p class="profNumb"><%= player.playTime %></p>
+                                <p class="profNumb"><%= player.playTime %> Mins</p>
                             </div>
         
                             <div class="profileInfo">
