--- a/views/pages/server.ejs
+++ b/views/pages/server.ejs
@@ -32,6 +32,7 @@
                 <a href="/server" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
+                <a href="/launch" class="navMob-link">Launch</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
             </div>
           </div>
@@ -51,6 +52,7 @@
                     <a href="/server" class="navBar-link navActive">Server Status</a>
                     <a href="/leaderboards" class="navBar-link">Leaderboards</a>
                     <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
+                    <a href="/launch" class="navBar-link">Launch</a>
                     <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
                     
                     <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
