--- a/views/pages/server.ejs
+++ b/views/pages/server.ejs
@@ -29,7 +29,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeMobileNav()">&times;</a>
             <div class="mobileContent-nav-content">
                 <a href="/" class="navMob-link">Home</a>
-                <a href="/server" class="navMob-link">Server Status</a>
+                <a href="/status" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
                 <a href="/launch" class="navMob-link">Launch</a>
@@ -49,7 +49,7 @@
 
                 <div class="navBar-right">
                     <a href="/" class="navBar-link">Home</a>
-                    <a href="/server" class="navBar-link navActive">Server Status</a>
+                    <a href="/status" class="navBar-link navActive">Server Status</a>
                     <a href="/leaderboards" class="navBar-link">Leaderboards</a>
                     <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                     <a href="/launch" class="navBar-link">Launch</a>
