--- a/views/pages/comingsoon.ejs
+++ b/views/pages/comingsoon.ejs
@@ -38,7 +38,7 @@
                 <a href="/status" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
-                <a href="/launch" class="navMob-link">Launch</a>
+                <a href="/roadmap" class="navMob-link">Roadmap</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
             </div>
           </div>
@@ -60,7 +60,7 @@
                         <a href="/status" class="navBar-link">Server Status</a>
                         <a href="/leaderboards" class="navBar-link">Leaderboards</a>
                         <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
-                        <a href="/launch" class="navBar-link navActive">Launch</a>
+                        <a href="/roadmap" class="navBar-link navActive">Roadmap</a>
                         <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
                         
                         <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
@@ -78,6 +78,9 @@
 
 
             <div class="HomeContainer">
+                <div class="homeHeader">
+                    <p class="homeTitle">Coming Soon!</p>
+                </div>
                 <iframe title="Tarkraft Roadmap"class="clickup-embed" src="https://share.clickup.com/l/h/87tvy-672/9e6f489c03dc3f7" onwheel="" width="100%" height="700px" style="background: transparent; border: 1px solid #ccc;"></iframe>
             </div>
 
