--- a/views/pages/leaderboards.ejs
+++ b/views/pages/leaderboards.ejs
@@ -33,7 +33,7 @@
                 <a href="/status" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
-                <a href="/launch" class="navMob-link">Launch</a>
+                <a href="/roadmap" class="navMob-link">Roadmap</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
             </div>
           </div>
@@ -53,7 +53,7 @@
                     <a href="/status" class="navBar-link">Server Status</a>
                     <a href="/leaderboards" class="navBar-link navActive">Leaderboards</a>
                     <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
-                    <a href="/launch" class="navBar-link">Launch</a>
+                    <a href="/roadmap" class="navBar-link">Roadmap</a>
                     <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
                     
                     <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
