--- a/views/pages/comingsoon.ejs
+++ b/views/pages/comingsoon.ejs
@@ -78,9 +78,8 @@
 
 
             <div class="HomeContainer">
-                <div class="homeHeader">
-                    <iframe title="Tarkraft Roadmap"class="clickup-embed" src="https://share.clickup.com/l/h/87tvy-672/9e6f489c03dc3f7" onwheel="" width="100%" height="700px" style="background: transparent; border: 1px solid #ccc;"></iframe>
-                </div>
+                <p class="homeTitle">Roadmap</p>
+                <iframe title="Tarkraft Roadmap"class="clickup-embed" src="https://share.clickup.com/l/h/87tvy-672/9e6f489c03dc3f7" onwheel="" width="100%" height="700px" style="background: transparent; border: 1px solid #ccc;"></iframe>
             </div>
 
 
