Added Server Image

--- a/views/pages/server.ejs
+++ b/views/pages/server.ejs
@@ -88,7 +88,7 @@
                     <div class="serverModule">
 
                         <div class="smLeft">
-                            <img src="https://via.placeholder.com/500" class="server-moduleImage">
+                            <img src="/assests/images/tarkraft500.png" class="server-moduleImage">
                         </div>
     
                         <div class="smRight">
