--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -608,6 +608,19 @@ a {
 
 /* END OF Footer */
 
+/* Joshs Additions */
+
+.download-Btn {
+    font-family: 'Orbitron', sans-serif;
+    text-transform: uppercase;
+    align-items: center;
+    text-align: center;
+    font-weight: 600;
+    font-size: 15px;
+    color: #CFCFCF;
+    border: 1px solid #fff;
+    padding: 18px 28px;
+}
 
 /* RESPONSIVE */
 
