--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,8 +37,9 @@
                 <a href="/status" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
+                <a href="https://forums.tarkraft.com/" class="navMob-link">Forums</a>
                 <a href="/roadmap" class="navMob-link">Roadmap</a>
-                <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
+                <a href="/launcher" class="navMob-link">Launcher</a>
             </div>
           </div>
 
@@ -55,12 +56,13 @@
                     </div>
 
                     <div class="navBar-right">
-                        <a href="/" class="navBar-link navActive">Home</a>
+                        <a href="/" class="navBar-link">Home</a>
                         <a href="/status" class="navBar-link">Server Status</a>
                         <a href="/leaderboards" class="navBar-link">Leaderboards</a>
                         <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
-                        <a href="/roadmap" class="navBar-link">Roadmap</a>
-                        <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
+                        <a href="https://forums.tarkraft.com/" class="navBar-link">Forums</a>
+                        <a href="/roadmap" class="navBar-link navActive">Roadmap</a>
+                        <a href="/launcher" class="navBar-btn">Launcher</a>
                         
                         <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
                     </div>
