--- a/views/pages/leaderboards.ejs
+++ b/views/pages/leaderboards.ejs
@@ -33,9 +33,9 @@
                 <a href="/status" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
+                <a href="https://forums.tarkraft.com/" class="navMob-link">Forums</a>
                 <a href="/roadmap" class="navMob-link">Roadmap</a>
-                <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
-            </div>
+                <a href="/launcher" class="navMob-link">Launcher</a>
           </div>
 
         <!-- NAVBAR MOBILE END -->
@@ -53,8 +53,9 @@
                     <a href="/status" class="navBar-link">Server Status</a>
                     <a href="/leaderboards" class="navBar-link navActive">Leaderboards</a>
                     <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
+                    <a href="https://forums.tarkraft.com/" class="navBar-link">Forums</a>
                     <a href="/roadmap" class="navBar-link">Roadmap</a>
-                    <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
+                    <a href="/launcher" class="navBar-btn">Launcher</a>
                     
                     <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
                 </div>
