--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -88,7 +88,7 @@
                         But BEWARE, only risk whatever you are willing to lose.
                     </p>
 
-                    <a href="pages/launcher" class="headingBtn">Get the Modpack/Launcher</a>
+                    <a href="/launcher" class="headingBtn">Get the Modpack/Launcher</a>
                 </div>
 
             </div>
