Updated Launcher Page

--- a/views/pages/launcher.ejs
+++ b/views/pages/launcher.ejs
@@ -78,9 +78,12 @@
 
         <!-- container -->
 
-
+            <p class="bigHeading">Latest Version: 1.2.9</p>
             <div class="HomeContainer">
                 <a href="assets/files/TarkraftInstaller.exe" class="download-Btn">Download Launcher Here</a>
+            </div>
+            <div class="HomeContainer">
+                <a href="assets/files/patch.exe" class="download-Btn">Download Updater Here</a>
             </div>
 
 
