--- a/views/pages/launcher.ejs
+++ b/views/pages/launcher.ejs
@@ -78,7 +78,7 @@
 
         <!-- container -->
 
-            <p class="bigHeading">Latest Version: 1.2.9</p>
+            <center><p class="bigHeading">Latest Version: 1.2.9</p></center>
             <div class="HomeContainer">
                 <a href="assets/files/TarkraftInstaller.exe" class="download-Btn">Download Launcher Here</a>
             </div>
