Added the gunchart lets hope this works first shot!

--- a/views/pages/gunchart.ejs
+++ b/views/pages/gunchart.ejs
@@ -39,6 +39,7 @@
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Forums</a>
+                <a href="/guns" class="navMob-link">Gun Chart</a>
                 <a href="/roadmap" class="navMob-link">Roadmap</a>
                 <a href="/launcher" class="navMob-link">Launcher</a>
             </div>
@@ -62,7 +63,8 @@
                         <a href="/leaderboards" class="navBar-link">Leaderboards</a>
                         <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                         <a href="https://forums.tarkraft.com/" class="navBar-link">Forums</a>
-                        <a href="/roadmap" class="navBar-link navActive">Roadmap</a>
+                        <a href="/guns" class="navBar-link navActive">Gun Chart</a>
+                        <a href="/roadmap" class="navBar-link">Roadmap</a>
                         <a href="/launcher" class="navBar-btn">Launcher</a>
                         
                         <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
@@ -80,7 +82,7 @@
 
 
             <div class="HomeContainer">
-                <iframe title="Tarkraft Roadmap"class="clickup-embed" src="https://share.clickup.com/l/h/87tvy-672/9e6f489c03dc3f7" onwheel="" width="100%" height="700px" style="background: transparent; border: 1px solid #ccc;"></iframe>
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStpQjYytsWghL9FfJXzk88GyxKtPaDQQ2n15cK1pHK7F_qlVvTwMKikl5-9bZhBYr_FJ9lxiUa0-y_/pubhtml?widget=true&amp;headers=false"></iframe>
             </div>
 
 
