--- a/views/pages/leaderboards.ejs
+++ b/views/pages/leaderboards.ejs
@@ -34,6 +34,7 @@
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Forums</a>
+                <a href="/guns" class="navMob-link">Gun Chart</a>
                 <a href="/roadmap" class="navMob-link">Roadmap</a>
                 <a href="/launcher" class="navMob-link">Launcher</a>
           </div>
@@ -54,6 +55,7 @@
                     <a href="/leaderboards" class="navBar-link navActive">Leaderboards</a>
                     <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                     <a href="https://forums.tarkraft.com/" class="navBar-link">Forums</a>
+                    <a href="/guns" class="navBar-link">Gun Chart</a>
                     <a href="/roadmap" class="navBar-link">Roadmap</a>
                     <a href="/launcher" class="navBar-btn">Launcher</a>
                     
