--- a/views/pages/roadmap.ejs
+++ b/views/pages/roadmap.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="Escape From Tarkraft"/>
         <title>Escape From Tarkraft</title>
-        <meta property="og:description" content="The Official Tarkraft Launcher now available for download!"/>
+        <meta property="og:description" content="A true hardcore PvP shooter experience in Minecraft!"/>
         <meta property="og:image" content="https://joshuacote.net/assets/images/Eagle111.png"/>
         <meta name="keywords" content="Tarkraft, Escape from Tarkraft, Escape from Tarkov, Tarkov, Tarkov in Minecraft, EFT, EFT in Minecraft">
         <meta name="author" content="Joshua Cote">
@@ -64,8 +64,8 @@
                         <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                         <a href="https://forums.tarkraft.com/" class="navBar-link">Forums</a>
                         <a href="/guns" class="navBar-link">Gun Chart</a>
-                        <a href="/roadmap" class="navBar-link">Roadmap</a>
-                        <a href="/launcher" class="navBar-btn navActive">Launcher</a>
+                        <a href="/roadmap" class="navBar-link navActive">Roadmap</a>
+                        <a href="/launcher" class="navBar-btn">Launcher</a>
                         
                         <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
                     </div>
@@ -80,10 +80,9 @@
 
         <!-- container -->
 
-            <center><p class="bigHeading">Latest Version: 1.2.9</p></center>
+
             <div class="HomeContainer">
-                <a href="assets/files/TarkraftInstaller.exe" class="download-Btn">Download Launcher Here</a>
-                <a href="assets/files/patch.exe" class="download-Btn">Download Updater Here</a>
+                <iframe title="Tarkraft Roadmap"class="clickup-embed" src="https://share.clickup.com/l/h/87tvy-672/9e6f489c03dc3f7" onwheel="" width="100%" height="700px" style="background: transparent; border: 1px solid #ccc;"></iframe>
             </div>
 
 
