--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -38,6 +38,7 @@
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Forums</a>
+                <a href="/guns" class="navMob-link">Gun Chart</a>
                 <a href="/roadmap" class="navMob-link">Roadmap</a>
                 <a href="/launcher" class="navMob-link">Launcher</a>
             </div>
@@ -56,12 +57,13 @@
                     </div>
 
                     <div class="navBar-right">
-                        <a href="/" class="navBar-link">Home</a>
+                        <a href="/" class="navBar-link navActive">Home</a>
                         <a href="/status" class="navBar-link">Server Status</a>
                         <a href="/leaderboards" class="navBar-link">Leaderboards</a>
                         <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                         <a href="https://forums.tarkraft.com/" class="navBar-link">Forums</a>
-                        <a href="/roadmap" class="navBar-link navActive">Roadmap</a>
+                        <a href="/guns" class="navBar-link">Gun Chart</a>
+                        <a href="/roadmap" class="navBar-link">Roadmap</a>
                         <a href="/launcher" class="navBar-btn">Launcher</a>
                         
                         <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
