--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -51,10 +51,11 @@
                 <div class="navBar-right">
                     <a href="/" class="navBar-link">Home</a>
                         <a href="/status" class="navBar-link">Server Status</a>
-                        <a href="/leaderboards" class="navBar-link">Leaderboards</a>
+                        <a href="/leaderboards" class="navBar-link navActive">Leaderboards</a>
                         <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                         <a href="https://forums.tarkraft.com/" class="navBar-link">Forums</a>
-                        <a href="/roadmap" class="navBar-link navActive">Roadmap</a>
+                        <a href="/guns" class="navMob-link">Gun Chart</a>
+                        <a href="/roadmap" class="navBar-link">Roadmap</a>
                         <a href="/launcher" class="navBar-btn">Launcher</a>
                     
                     <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
