Nav Bar looked like shit

--- a/views/pages/gunchart.ejs
+++ b/views/pages/gunchart.ejs
@@ -35,7 +35,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeMobileNav()">&times;</a>
             <div class="mobileContent-nav-content">
                 <a href="/" class="navMob-link">Home</a>
-                <a href="/status" class="navMob-link">Server Status</a>
+                <a href="/status" class="navMob-link">Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Forums</a>
@@ -59,7 +59,7 @@
 
                     <div class="navBar-right">
                         <a href="/" class="navBar-link">Home</a>
-                        <a href="/status" class="navBar-link">Server Status</a>
+                        <a href="/status" class="navBar-link">Status</a>
                         <a href="/leaderboards" class="navBar-link">Leaderboards</a>
                         <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                         <a href="https://forums.tarkraft.com/" class="navBar-link">Forums</a>
@@ -82,7 +82,7 @@
 
 
             <div class="HomeContainer">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStpQjYytsWghL9FfJXzk88GyxKtPaDQQ2n15cK1pHK7F_qlVvTwMKikl5-9bZhBYr_FJ9lxiUa0-y_/pubhtml?widget=true&amp;headers=false"></iframe>
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStpQjYytsWghL9FfJXzk88GyxKtPaDQQ2n15cK1pHK7F_qlVvTwMKikl5-9bZhBYr_FJ9lxiUa0-y_/pubhtml"></iframe>
             </div>
 
 
