--- a/views/pages/launcher.ejs
+++ b/views/pages/launcher.ejs
@@ -35,7 +35,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeMobileNav()">&times;</a>
             <div class="mobileContent-nav-content">
                 <a href="/" class="navMob-link">Home</a>
-                <a href="/status" class="navMob-link">Server Status</a>
+                <a href="/status" class="navMob-link">Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
                 <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Forums</a>
@@ -59,7 +59,7 @@
 
                     <div class="navBar-right">
                         <a href="/" class="navBar-link">Home</a>
-                        <a href="/status" class="navBar-link">Server Status</a>
+                        <a href="/status" class="navBar-link">Status</a>
                         <a href="/leaderboards" class="navBar-link">Leaderboards</a>
                         <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                         <a href="https://forums.tarkraft.com/" class="navBar-link">Forums</a>
