Lets hope this works nicely

--- a/views/pages/gunchart.ejs
+++ b/views/pages/gunchart.ejs
@@ -81,8 +81,8 @@
         <!-- container -->
 
 
-            <div class="HomeContainer">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStpQjYytsWghL9FfJXzk88GyxKtPaDQQ2n15cK1pHK7F_qlVvTwMKikl5-9bZhBYr_FJ9lxiUa0-y_/pubhtml"></iframe>
+            <div class="iframe-container">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStpQjYytsWghL9FfJXzk88GyxKtPaDQQ2n15cK1pHK7F_qlVvTwMKikl5-9bZhBYr_FJ9lxiUa0-y_/pubhtml?widget=true&amp;headers=false"></iframe>
             </div>
 
 
