--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -622,6 +622,21 @@ a {
     padding: 18px 28px;
 }
 
+.iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9*/
+    position: relative;
+  }
+  
+.iframe-container iframe {
+    border: 0;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
 /* RESPONSIVE */
 
 @media only screen and (max-width: 1820px) {
