--- a/views/pages/launcher.ejs
+++ b/views/pages/launcher.ejs
@@ -83,7 +83,7 @@
             <center><p class="bigHeading">Latest Version: 1.2.9</p></center>
             <div class="HomeContainer">
                 <a href="assets/files/TarkraftInstaller.exe" class="download-Btn">Download Launcher Here</a>
-                <a href="assets/files/patch.exe" class="download-Btn">Download Updater Here</a>
+                <a href="assets/files/Update.bat" class="download-Btn">Download Updater Here</a>
             </div>
 
 
